--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,33 +9,24 @@
 
 body {
   font-family: 'Rajdhani', sans-serif;
-  /* font-size: clamp(1rem, 1vw + 0.5rem, 5rem); */
-  color: white;
-
-  background-color: rgb(3, 2, 66);}
+  color: #ffffff;
+  background-color: rgb(98, 97, 144);}
 
 
-/* --- ALL HOVERS --- */ 
-.navbar-container .highlight,
-.navbar-container .current a {
-  
-     
+/* --- ALL HIGHLIGHT EFFECTS --- */ 
+.current a,
+.logotype,
+.landing-text h2 {
   filter: drop-shadow(2px 2px 2px rgba(155, 141, 13, 0.9));
-
-  /* Set the background-clip to text */
   background-clip: text;
-  
-  /* Set the background image to a linear gradient */
   -webkit-background-clip: text;
   background-image: linear-gradient(to right,  rgb(11, 238, 11), rgb(145, 235, 0), rgb(17, 230, 17));
-  
-  /* Set the text color to transparent */
   color: transparent;
- 
   }
-.navbar-container a:hover {
+
+/* --- ALL HOVERS --- */ 
+.navbar a:hover {
   color: #910aff;
- 
  }
 .logotype:hover {
   color: #05f7ff;}
@@ -52,11 +43,11 @@ body {
 .header-container {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   justify-content: space-between;
   align-items: center;
   height: 6em;
   padding: 0 3em;
-
   background-color:black;
   border-bottom: 4px solid;
   border-image: linear-gradient(
@@ -67,40 +58,19 @@ body {
     ) 1 2 10%;}
 
 .logotype {
-  /* outline: auto; */
   text-decoration: unset;
   font-family: "Conthrax";
   font-size: 3rem;
-  color: #ffffff;
-  
-  filter: drop-shadow(2px 2px 2px rgba(255, 230, 0, 0.9));
-
-  /* Set the background-clip to text */
-  background-clip: text;
-  
-  /* Set the background image to a linear gradient */
-  -webkit-background-clip: text;
-  background-image: linear-gradient(to right,  rgb(11, 238, 11), rgb(145, 235, 0), rgb(17, 230, 17));
-  
-  /* Set the text color to transparent */
-  color: transparent;
 }
 
-
 /* - NAV-BAR - */
-.navbar {
-  display: flex;
-  justify-content: end;
-  width: 100%;
-  }
+
 .navbar-list {
   list-style: none;
   display: flex;
   gap: 3em;
 }
-.navbar-list-item {
-  
-}
+
 .navbar-link {
   color: #ffffff;
   font-size: 3rem;
@@ -108,33 +78,16 @@ body {
   text-decoration: unset;}
 
 /* - LANDING TEXT - */ 
-.landing-text {
-/* display: none; */
-}
+
 .landing-text h2 {
   font-size: clamp(2rem, 1vw + 2.3rem, 5rem);
   font-style: italic;
-  filter: drop-shadow(2px 2px 2px rgba(255, 230, 0, 0.9));
-
-/* Set the background-clip to text */
-background-clip: text;
-
-/* Set the background image to a linear gradient */
--webkit-background-clip: text;
-background-image: linear-gradient(to right,  rgb(11, 238, 11), rgb(145, 235, 0), rgb(17, 230, 17));
-
-/* Set the text color to transparent */
-color: transparent;
-
-
 }
   
 /* - POSTS SECTION - */
 .post-section-container {
   display: flex;
   justify-content: center;
- /* outline: auto; */
-  /* padding: 1em 0; */
  margin: 4.4em 0;
 }
 .post-section {
@@ -143,12 +96,13 @@ color: transparent;
     justify-content: center;
     flex-direction: row;
     gap: 4em;
-    }
+}
+
 .post
 {
   height:35em;
     width:28em;
-    padding: 1em 1.2em;
+    padding: 1em 1.5em;
     background-color: black;
     border: 5px solid;
     border-image:linear-gradient(
@@ -174,13 +128,11 @@ color: transparent;
 
 .post-header {
     margin: 0.3em 0;
-    text-align: start;
     font-size: clamp(0.2rem, 0.7vw + 1rem, 3rem);
   }
 .post-text {
-  /* outline: auto; */
+  line-height: 1.3em;
     height:12em; 
-    text-align: start;
     font-family: Arial, Helvetica, sans-serif;
     font-size: clamp(0.2rem, 0.5vw + 1rem, 1rem);}
 .post-read-more {
@@ -194,15 +146,12 @@ color: transparent;
 
 /* - FOOTER - */
 .footer-container {  
-
   background-color: #000000;
   display: flex;
   flex-wrap: wrap;
   flex-direction:row-reverse;
   justify-content: center;
   justify-content: space-evenly;
-
-  /* height:12em; */
   padding: 1em 0;
   border-top: 4px solid;
   border-image: linear-gradient(
@@ -216,7 +165,8 @@ color: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
-  list-style: none;}
+  list-style: none;
+}
 .social-links li a i {
   text-align: center;
   margin: 0.4em;
@@ -240,31 +190,30 @@ color: transparent;
     align-items: center;
     justify-content: center;
   }
-.newsletter-section {
-  
-  }
+
 .newsletter-header { 
     text-align: center;
     color: cyan;
     font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
     background-color: black;}
+
 input[type="email"] {
-    /* padding: 1em; */
     outline: unset;}
+
 .newsletter-form-input {
     text-align: center;
     width: 100%;
     font-family: "Rajdhani";
     font-size: clamp(1rem, 1vw + 1rem, 1.5rem);
-    padding: 0em;
     color: black;
     outline: unset;}
+    
 .newsletter-button {
     width: 100%;
     font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
     background-color: black;
     color: cyan;
-    border: 10px solid;
+    border: 8px solid;
     border-image: linear-gradient(
       to bottom,
       rgba(50, 8, 201, 0.5),
@@ -279,16 +228,14 @@ input[type="email"] {
 
 /* ----------- HEADER ----------- */
 .header-container {
-  /* height: 2em; */
   display: flex;
   justify-content: center;
-  /* flex-wrap: wrap; */
+  flex-wrap:nowrap;
   flex-direction: column;
   height: 6em;
   padding: 1em 0;
   gap:0;
   width: 100%;
-    background-color:rgba(7, 7, 7, 0.8);
     border-bottom: 2px solid;
     border-image: linear-gradient(
         to right,
@@ -306,45 +253,28 @@ input[type="email"] {
 
 /* ----------- NAV-BAR ----------- */
 .navbar {
-    justify-content: center;
    margin: 0.5em 0;
   }
 .navbar-list {
-    display: flex;
-    justify-content: center;
     gap:1.5em;
-    list-style: none;
   }
-.navbar-list-item {
-   
-  }
+
 .navbar-link {
-    color:#ffffff;
     font-size: 1.2rem;}
 
    
 /* -------------- POSTS SECTION -------------- */
 .post-section-container{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-top: clamp(0.2em, 1vw + 0.5em, 10em);
-  margin-bottom: clamp(0.2em, 1vw + 0.5em, 10em);
+  margin-top: clamp(0.2em, 1vw + 0.2em, 10em);
+  margin-bottom: clamp(0.2em, 1vw + 0.1em, 10em);
 }
 .post-section{
-  /* outline: auto; */
   margin: 0 clamp(0.2em, 1vw + 1.5em, 40em);
-display: flex;
-flex-direction: row;
-justify-content: center;
 }
 
 .post{
-  /* outline: auto; */
-  /* padding: clamp(0.2em, 5%, 2em) clamp(1.4em, 10%, 3em); */
   padding: 0 clamp(0.2em, 0.5vw + 1em, 10em);
-
-  height: clamp(20em, 1vw + 24em, 60em);
+  height: clamp(20em, 1vw + 24.5em, 60em);
   width:auto;
   text-align: center;
 }
@@ -352,7 +282,6 @@ justify-content: center;
 .post-image {
   object-fit: contain;
   margin-top: clamp(0.7em, 1vh + 1em, 5em);
-
   height: clamp(1em, 1vh + 5em, 10em);
     border: 2px solid;
     border-image:linear-gradient(
@@ -364,21 +293,21 @@ justify-content: center;
     ) 1 2 10% 90%;} 
 
 .post-header {
-    margin: clamp(0.3em, 2.5vw, 10em) 0;
+    margin-bottom: clamp(0.3em, 1vw + 0.2rem, 10em) 0;
     text-align: start;
     font-size: clamp(0.2rem, 1vw + 0.9rem, 2rem);
   }
 .post-text {
-  /* outline: auto; */
-    margin: clamp(0.2em, 1vw + 0.3em, 10em) 0;
+
+  height:14.5em;
+    margin-bottom:0em;
     text-align: start;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: clamp(0.2rem, 1vw + 0.7rem, 3rem);}
+    font-size: clamp(0.2rem, 1vw + 0.65rem, 3rem);}
 .post-read-more {
-  /* outline: auto; */
   float:right;
     color: cyan;
-    margin: clamp(0.2em, 1vw + 0.5em, 10em) 0;
+    margin: clamp(0.2em, 1vw + 0.2em, 10em) 0;
   }
   .post-read-more-text {
     color:cyan;
@@ -393,15 +322,11 @@ justify-content: center;
   display: none;
 }
 .footer-container {  
-
   background-color: #000000;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
-  /* align-items: center; */
-  /* justify-content: space-evenly; */
-
   margin:0;
   padding:0;
   border-top: 4px solid;
@@ -412,137 +337,158 @@ justify-content: center;
     #73028a 70%
     ) 1 2 10%;
 }
-.social-links {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  list-style: none;
-margin:0;
-padding:0;}
+
 .social-links li a i {
   text-align: center;
-  /* margin: 0.4em; */
   width: 42px;
   height: 42px;
   line-height: 2.5rem;
   font-size: clamp(0.2rem, 1vw + 1.5rem, 5rem);
-  border-radius: 50%;
-  color: white;
-  background-color: rgb(34, 2, 214);
-  transition: all 0.35s ease-in-out;
-  -moz-transition: all 0.35s ease-in-out;
-  -webkit-transition: all 0.35s ease-in-out;
-  -o-transition: all 0.35s ease-in-out;}
-
-  }
+}
+}
 
 
 @media screen and (min-width: 23em) and (max-width:119em){
   /* -------------- BLOG -------------- */
-.post-section-container {
+  .post-section-container {
   margin-top:2em;
-    margin-bottom:4.2em;
-    
+  margin-bottom:4.2em;
   }
   .post {
-    height:auto;
+  height:auto;
   }
 
 }
 
 @media screen and (min-width: 25.875em) and (max-width:119em){
-  .post-section-container {
-    /* margin-top: 2em; */
-    margin-bottom: 8em;
+  
+  .navbar-link {
+    font-size: 1.5rem;
   }
-
-
+  .post-section-container {
+    margin-top: 2em;
+    margin-bottom: 2.5em;
+  }
+.post-header {
+  font-size: 1.6rem;
+}
+.post-text {
+  font-size: 1.2rem;
+}
+.post-read-more{
+  margin-bottom: 0.6em;
+}
+.post-read-more-text{
+  font-size: 1.4rem;
+}
 }
 
 /* iPhone X - MIN-HEIGHT  */
 @media screen and (min-height: 50.75em) and (max-width:119em){
-  /* -------------- BLOG -------------- */
-.post-section-container {
-
-    margin-top: 5em;
-    margin-bottom: 10em;
+  .navbar-link {
+    font-size: 1.5rem;
   }
-.post-header {
-  font-size: clamp(0.2rem, 1vh + 0.8rem, 5rem);
+  
+  .post-section-container {
+  margin-top: 3em;
+  margin-bottom: 2.8em;
+  }
+  .post-section {
+    margin: 0 1em;
+  }
+  .post {
+    padding: 0 1.5em;
+  }
+  .post-header {
+  font-size: clamp(0.2rem, 1vh + 1rem, 5rem);
+}
+.post-text {
+  height: auto;
+  font-size: 1.2rem;
+  margin-bottom:1em;
 }
 
+.post-read-more {
+margin:1em 0;
 }
+}
+/* 600px */
 @media screen and (min-width: 37.5em) and (max-width:119em){
-  
   .header-container{
     height: 8em;
-    padding:0;
-    
   }
   .logotype-container {
     margin-top: 1em;
-    margin-bottom: 1em;
+    margin-bottom: 0.2em;
    }
   .logotype {
-    
-    font-size: clamp(0.5rem, 1vw + 1.5rem, 3rem);
+    font-size: clamp(0.5rem, 1vw + 2.2rem, 5rem);
   }
-  .navbar {
-    margin:0;
-  }
+
   .navbar-link {
     font-size: clamp(0.5rem, 1vw + 1.5rem, 3rem);
   }
   /* -------------- BLOG -------------- */
-.post-section-container {
-   /* display: none; */
-   margin-top:2em;
-    margin-bottom: 2.5em;
-
+  .post-section-container {
+    margin-top:1em;
+    margin-bottom: 1em;
   }
-
-
 .post-image {
   height: 10em;
 }
 
-
+.post-text {
+  height:auto;
+  font-size: 1.4rem;
+  line-height: 2.2rem;
+}
+.post-read-more {
+  margin: 1.2em 0;
+}
 }
 
 @media screen and (min-width: 48em) and (max-width:119em){
 
-.header-container{
-  height: 10em;
-  
-}
-.logotype {
-  font-size: clamp(0.5rem, 1vw + 3rem, 7rem);
-}
-.navbar-list {
-  gap: 3em;
-}
-.navbar-link {
-  font-size: clamp(0.5rem, 1vw + 2rem, 5rem);
-}
-  .post-section-container {
-  margin-top: 5em;
-  margin-bottom: 4.8em;
+  .header-container{
+    height: 10em;
   }
-.post {
-  padding: 0 clamp(0.5rem, 1vw + 3rem, 10rem);;
-}
+  .logotype {
+    font-size: clamp(0.5rem, 1vw + 3rem, 7rem);
+  }
+  .navbar-list {
+    gap: 3em;
+  }
+  .navbar-link {
+    font-size: clamp(0.5rem, 1vw + 2rem, 5rem);
+  }
+  .post-section-container {
+  margin-top: 2em;
+  margin-bottom: 3em;
+  }
+  .post {
+    padding: 0 clamp(0.5rem, 1vw + 3rem, 10rem);;
+  }
 
   .post-header{
-    font-size: clamp(0.5rem, 1vw + 2rem, 3rem);
+    font-size: clamp(0.5rem, 1vw + 2rem, 4rem);
   }
-.post-text {
-  line-height: 2rem;
+
+ 
+  .post-text {
+    /* outline: auto; */
+    height: auto;
+    line-height: 2.5rem;
+    font-size: clamp(0.5rem, 1vw + 1rem, 3rem);
+  }
+
+.post-read-more{
+  margin-bottom: 1.5em;
+}
+.post-read-more-text{
+  
+  font-size: clamp(0.5rem, 1vw + 1.5rem, 5rem);
 }
 
-.footer-container {
-  height: 7em;
-
-}
 .social-links li a i {
   text-align: center;
   margin: 0.4em;
@@ -551,19 +497,44 @@ padding:0;}
   line-height: 4.5rem;
   font-size: clamp(1rem, 1vw + 2.5rem, 5rem);
  }
-
 }
 
 
 @media screen and (min-width: 62em) and (max-width:119em) {
   .post-section-container {
     margin-top: 5em;
-    margin-bottom: 22.2em;
+    margin-bottom: 6.5em;
     }
 
+    .post-section {
+      margin: 0 5em;
+    }
     .post {
-      padding: 0 10em;
+      height: auto;
+      padding: 0 3em;
+      margin: 2em 0em;
     }
-
-
+    .post-image {
+      height: 15em;
+    }
+.post-header {
+      font-size: clamp(0.5rem, 1vw + 2.5rem, 5rem);
+  
+}
+.post-text{
+  height: auto;
+  line-height: 3rem;
+  font-size: clamp(0.5rem, 1vw + 1.5rem, 4rem);
+  margin-bottom: 0.5em;
+  
+}
+.post-read-more {
+  margin: 1.5em 0;
+}
+.post-read-more-text{
+  font-size: clamp(0.5rem, 1vw + 2rem, 5rem);
+}
+.social-links {
+  gap: 3em;
+}
 }
