--- a/assets/css/style_contact.css
+++ b/assets/css/style_contact.css
@@ -1,16 +1,12 @@
 
-/* - FORM: CONTACT - */
-
-
 .contact-section-container {
 display: flex;
 justify-content: center;
 margin-top: 10em;
 margin-bottom: 13em;
-
 }
+
 .contact-section {
-    /* outline: auto; */
     flex-direction: column;
     flex-wrap: wrap;
     width:30em;
@@ -24,16 +20,15 @@ font-size: clamp(0.5rem, 1vw + 0.8rem, 3rem);
 }
 
 .contact-form {
-
     width: 100%;
     font-size: clamp(0.2rem, 1vw + 0.5rem, 2rem);
     text-align: center;
     outline: unset;
     color:black;
-   
 }
+
 .contact-form-input,
-.contact-form-text {
+.contact-message-input {
     font-family: Arial, Helvetica, sans-serif;
     padding: 0.5em 0;
     text-align: center;
@@ -48,17 +43,14 @@ font-size: clamp(0.5rem, 1vw + 0.8rem, 3rem);
                 #73028a 70%
                 ) 1 2 10%;
 }
-.contact-form-text {
-    height:5em;
-   
-}
 
+.contact-message-input {
+    height:5em;
+}
  
-.contact-form-text::placeholder {
-    display: none;
+.contact-message-input::placeholder {
     font-style: italic;
     padding: 1em;
-   
 }
 
 .contact-button{
@@ -74,65 +66,109 @@ font-size: clamp(0.5rem, 1vw + 0.8rem, 3rem);
             rgba(8, 255, 255, 0.8),
             rgba(255, 25, 224, 0.8),
             rgba(255, 25, 224, 0.1)
-          ) 1 2 10% 90%;}
-
-
-
+          ) 1 2 10% 90%;
+}
 
 
 /* - MEDIA QUERIES - */
-@media screen and (min-width: 20em) and (max-width:64em) {
-
-/* ---- FORMS ---- */
-
+@media screen and (min-width: 0em) and (max-width:119.938em) {
+.contact-section-container{
+    margin-top: clamp(0.2em, 1vw + 4em, 40em);
+  margin-bottom: clamp(0.2em, 1vw + 4.2em, 40em);
 }
 
-@media screen and (min-width: 23.438em) and (max-width:119.938em){
-    
-    .newsletter-container {
-       margin-top: 2em;
-    }
-    
-    .contact-form-container {
-    margin-bottom: 8em;
-}}
-@media screen and (min-width: 25em) and (max-width:119.938em) {
+.contact-section {
+    width: 17em;
+}
+.contact-header {
+    font-size:  clamp(0.2rem, 1vw + 1.5rem, 4rem);;
+}
 
- .newsletter-container {
-       margin-top: 4em;
-    }
-    
-    .contact-form-container {
-    margin-bottom: 10em;
-}}
+.contact-form {
+    font-size: clamp(0.2rem, 1vw + 1rem, 3rem);
+}
+.contact-form-input,
+.contact-message-input {
+    font-size: clamp(0.2rem, 1vw + 1rem, 3rem);
+}
 
+.contact-message-input {
+    /* height:8.1em; */
+    margin: 0.3em 0;
+}
+}
+
+
+@media screen and (min-width: 23em) and (max-width:119.938em){
+    .contact-section-container{
+        margin-top: 7em;
+      margin-bottom: 7.2em;
+    }
+}
+@media screen and (min-width: 25.875em) and (max-width:119.938em) {
+    .contact-section-container{
+        margin-top: 10em;
+        margin-bottom: 8.4em;
+    }
+}
+
+/* iPhone X - MIN-HEIGHT  */
 @media screen and (min-height: 50.75em) and (max-width:119.938em){
 
- .newsletter-container {
-       margin-top: 4em;
+    .contact-section-container{
+        margin-top: 5em;
+        margin-bottom: 6em;
     }
-    
-    .contact-form-container {
-    margin-bottom: 15em;
-}}
+
+    .contact-message-input {
+        height: 15em;
+    }
+    .contact-message-input::placeholder {
+        font-size: clamp(0.2rem, 1vw + 1rem, 2rem);
+    }
+}
 
 @media screen and (min-width: 37.5em) and (max-width:119.938em){
- .newsletter-container {
-       margin-top: 6em;
+    .contact-section-container{
+    margin-top: 5em;
+    margin-bottom: 7.1em;
     }
-    
-    .contact-form-container {
-    margin-bottom: 10em;
-}}
+    .contact-section {
+        width:25em;
+    }
+
+    .contact-message-input {
+        height: 10em;
+    }
+    .contact-message-input::placeholder {
+        font-size: clamp(0.2rem, 1vw + 1rem, 2rem);
+    }
+}
 
 
 @media screen and (min-width: 48em) and (max-width:119.938em) {
-    .contact-form-container {
-    margin-bottom: 23em;
-}}
+    .contact-section-container{
+    margin-top: 10em;
+    margin-bottom: 10em;
+    }
+    .contact-section {
+        width:30em;
+    }
+}
 
 @media screen and (min-width: 62em) and (max-width:119.938em) {
-        .contact-form-container {
-    margin-bottom: 35.5em;
-}}
+    .contact-section-container{
+    margin-top: 10em;
+    margin-bottom: 19.5em;
+    }
+    .contact-section {
+        width:40em;
+    }
+    .contact-message-input {
+        height: 15em;
+    }
+    .contact-button {
+        font-size: 2.5rem;
+    }
+}
 
