--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,6 @@
 
 /* Global */
 * {
-  /* outline: 2px rgb(80, 121, 19) solid; */
   box-sizing: border-box;
   margin: 0;
   padding: 0;}
@@ -10,10 +9,10 @@
 body {
   font-family: 'Rajdhani', sans-serif;
   color: #ffffff;
-  background-color: rgb(98, 97, 144);}
+  background-color: black;}
 
 
-/* --- ALL HIGHLIGHT EFFECTS --- */ 
+/* --- EFFECT: HIGHLIGHT --- */ 
 .current a,
 .logotype,
 .landing-text h2 {
@@ -22,9 +21,9 @@ body {
   -webkit-background-clip: text;
   background-image: linear-gradient(to right,  rgb(11, 238, 11), rgb(145, 235, 0), rgb(17, 230, 17));
   color: transparent;
-  }
+}
 
-/* --- ALL HOVERS --- */ 
+/* --- EFFECT: HOVER --- */ 
 .navbar a:hover {
   color: #910aff;
  }
@@ -35,11 +34,41 @@ body {
   color: black;}
 .post-section a:hover {
   color: cyan;}
+.contact-button:hover,
 .social-links li a i:hover {
   background: greenyellow;
   color: black;}
 
-/* - HEADER - */ 
+
+  .article-section,
+  .article,
+  .article-image,
+  .resource-image {
+        border-image:linear-gradient(
+          to bottom,
+          rgba(8, 85, 201, 0.5),
+          rgba(8, 255, 255, 0.8),
+          rgba(255, 25, 224, 0.8),
+          rgba(255, 25, 224, 0.1)
+        ) 1 2 10% 90%;
+  }
+
+/* - BORDER: HEADER & FOOTER - */ 
+.header-container,
+.footer-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  background-color: #000000;
+  border-image: linear-gradient(
+    to right,
+    #310167 30%,
+    rgb(0, 247, 255) 50%,
+    #310167 70%
+    ) 1 2 10%;}
+
+
+  /* - HEADER - */ 
 .header-container {
   display: flex;
   flex-direction: row;
@@ -50,12 +79,7 @@ body {
   padding: 0 3em;
   background-color:black;
   border-bottom: 4px solid;
-  border-image: linear-gradient(
-    to right,
-    #73028a 10%,
-    rgb(2, 233, 241) 60%,
-    #73028a 70%
-    ) 1 2 10%;}
+ }
 
 .logotype {
   text-decoration: unset;
@@ -78,7 +102,6 @@ body {
   text-decoration: unset;}
 
 /* - LANDING TEXT - */ 
-
 .landing-text h2 {
   font-size: clamp(2rem, 1vw + 2.3rem, 5rem);
   font-style: italic;
@@ -88,7 +111,7 @@ body {
 .post-section-container {
   display: flex;
   justify-content: center;
- margin: 4.4em 0;
+  margin: 4.4em 0;
 }
 .post-section {
     display: flex;
@@ -98,68 +121,60 @@ body {
     gap: 4em;
 }
 
-.post
-{
+.post {
   height:35em;
-    width:28em;
-    padding: 1em 1.5em;
-    background-color: black;
-    border: 5px solid;
-    border-image:linear-gradient(
+  width:28em;
+  padding: 1em 1.5em;
+  background-color: black;
+  border: 5px solid;
+  border-image:linear-gradient(
       to bottom,
       rgba(8, 85, 201, 0.5),
       rgba(8, 255, 255, 0.8),
       rgba(255, 25, 224, 0.8),
       rgba(255, 25, 224, 0.1)
-    ) 1 2 10% 90%;} 
+  ) 1 2 10% 90%;
+} 
+
 .post-image {
   padding: 0.2em;
   object-fit: cover;
-    width: 100%;
-    height: 15em;
-    border: 5px solid;
-    border-image:linear-gradient(
+  width: 100%;
+  height: 15em;
+  border: 5px solid;
+  border-image:linear-gradient(
       to bottom,
       rgba(8, 85, 201, 0.5),
       rgba(8, 255, 255, 0.8),
       rgba(255, 25, 224, 0.8),
       rgba(255, 25, 224, 0.1)
-    ) 1 2 10% 90%;} 
+    ) 1 2 10% 90%;
+} 
 
 .post-header {
-    margin: 0.3em 0;
-    font-size: clamp(0.2rem, 0.7vw + 1rem, 3rem);
-  }
+  margin: 0.3em 0;
+  font-size: clamp(0.2rem, 0.7vw + 1rem, 3rem);
+}
 .post-text {
   line-height: 1.3em;
-    height:12em; 
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: clamp(0.2rem, 0.5vw + 1rem, 1rem);}
+  height:12em; 
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: clamp(0.2rem, 0.5vw + 1rem, 1rem);}
 .post-read-more {
   float:right;
-    font-size: clamp(0.2rem, 1vw + 1rem, 1.2rem);
-    color: cyan;
-  }
-  .post-read-more-text {
-    color:cyan;
-  }
+  font-size: clamp(0.2rem, 1vw + 1rem, 1.2rem);
+  color: cyan;
+}
+.post-read-more-text {
+  color:cyan;
+}
 
 /* - FOOTER - */
 .footer-container {  
-  background-color: #000000;
-  display: flex;
-  flex-wrap: wrap;
   flex-direction:row-reverse;
-  justify-content: center;
   justify-content: space-evenly;
   padding: 1em 0;
   border-top: 4px solid;
-  border-image: linear-gradient(
-    to right,
-    #73028a 10%,
-    rgb(2, 233, 241) 60%,
-    #73028a 70%
-    ) 1 2 10%;
 }
 .social-links {
   display: flex;
@@ -180,47 +195,49 @@ body {
   transition: all 0.35s ease-in-out;
   -moz-transition: all 0.35s ease-in-out;
   -webkit-transition: all 0.35s ease-in-out;
-  -o-transition: all 0.35s ease-in-out;}
+  -o-transition: all 0.35s ease-in-out;
+}
 
 
 /* - NEWSLETTER - */
 .newsletter-container {
   margin-left: 5em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .newsletter-header { 
-    text-align: center;
-    color: cyan;
-    font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
-    background-color: black;}
+  text-align: center;
+  color: cyan;
+  font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
+  background-color: black;}
 
 input[type="email"] {
-    outline: unset;}
+  outline: unset;}
 
 .newsletter-form-input {
-    text-align: center;
-    width: 100%;
-    font-family: "Rajdhani";
-    font-size: clamp(1rem, 1vw + 1rem, 1.5rem);
-    color: black;
-    outline: unset;}
+  text-align: center;
+  width: 100%;
+  font-family: "Rajdhani";
+  font-size: clamp(1rem, 1vw + 1rem, 1.5rem);
+  color: black;
+  outline: unset;}
     
 .newsletter-button {
-    width: 100%;
-    font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
-    background-color: black;
-    color: cyan;
-    border: 8px solid;
-    border-image: linear-gradient(
-      to bottom,
-      rgba(50, 8, 201, 0.5),
-      rgba(8, 255, 255, 0.8),
-      rgba(255, 25, 224, 0.8),
-      rgba(255, 25, 224, 0.1)
-    ) 1 2 10% 90%;}
+  width: 100%;
+  font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
+  background-color: black;
+  color: cyan;
+  border: 8px solid;
+  border-image: linear-gradient(
+    to bottom,
+    rgba(50, 8, 201, 0.5),
+    rgba(8, 255, 255, 0.8),
+    rgba(255, 25, 224, 0.8),
+    rgba(255, 25, 224, 0.1)
+  ) 1 2 10% 90%;
+}
 
 
 /* - MEDIA QUERIES - */
@@ -236,33 +253,27 @@ input[type="email"] {
   padding: 1em 0;
   gap:0;
   width: 100%;
-    border-bottom: 2px solid;
-    border-image: linear-gradient(
-        to right,
-        #FF00FF 10%,
-        rgb(0, 255, 255) 60%,
-        #FF00FF 70%
-    ) 1 2 10%;}
+ }
 .logotype-container{
   margin-top: 1em;
   margin-bottom: 0.4em;
 }
 .logotype {
-    font-size: 1.7rem;
-  }
+  font-size: 1.7rem;
+}
 
 /* ----------- NAV-BAR ----------- */
 .navbar {
-   margin: 0.5em 0;
-  }
+  margin: 0.5em 0;
+}
 .navbar-list {
-    gap:1.5em;
-  }
+  gap:1.5em;
+}
 
 .navbar-link {
-    font-size: 1.2rem;}
+  font-size: 1.2rem;
+}
 
-   
 /* -------------- POSTS SECTION -------------- */
 .post-section-container{
   margin-top: clamp(0.2em, 1vw + 0.2em, 10em);
@@ -283,36 +294,40 @@ input[type="email"] {
   object-fit: contain;
   margin-top: clamp(0.7em, 1vh + 1em, 5em);
   height: clamp(1em, 1vh + 5em, 10em);
-    border: 2px solid;
-    border-image:linear-gradient(
-      to bottom,
-      rgba(8, 85, 201, 0.5),
-      rgba(8, 255, 255, 0.8),
-      rgba(255, 25, 224, 0.8),
-      rgba(255, 25, 224, 0.1)
-    ) 1 2 10% 90%;} 
+  border: 2px solid;
+  border-image:linear-gradient(
+    to bottom,
+    rgba(8, 85, 201, 0.5),
+    rgba(8, 255, 255, 0.8),
+    rgba(255, 25, 224, 0.8),
+    rgba(255, 25, 224, 0.1)
+  ) 1 2 10% 90%;
+} 
 
 .post-header {
-    margin-bottom: clamp(0.3em, 1vw + 0.2rem, 10em) 0;
-    text-align: start;
-    font-size: clamp(0.2rem, 1vw + 0.9rem, 2rem);
-  }
-.post-text {
+  margin-bottom: clamp(0.3em, 1vw + 0.2em, 10em) 0;
+  text-align: start;
+  font-size: clamp(0.2rem, 1vw + 0.9rem, 2rem);
+}
 
+.post-text {
   height:14.5em;
-    margin-bottom:0em;
-    text-align: start;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: clamp(0.2rem, 1vw + 0.65rem, 3rem);}
+  margin-bottom:0em;
+  text-align: start;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: clamp(0.2rem, 1vw + 0.65rem, 3rem);
+}
+
 .post-read-more {
   float:right;
-    color: cyan;
-    margin: clamp(0.2em, 1vw + 0.2em, 10em) 0;
-  }
-  .post-read-more-text {
-    color:cyan;
-    font-size: clamp(0.2rem, 1vh + 0.8rem, 5rem);
-  }
+  color: cyan;
+  margin: clamp(0.2em, 1vw + 0.2em, 10em) 0;
+}
+
+.post-read-more-text {
+  color:cyan;
+  font-size: clamp(0.2rem, 1vh + 0.8rem, 5rem);
+}
 
 /* - FOOTER - */
 .post-2,
@@ -322,20 +337,8 @@ input[type="email"] {
   display: none;
 }
 .footer-container {  
-  background-color: #000000;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: center;
   margin:0;
   padding:0;
-  border-top: 4px solid;
-  border-image: linear-gradient(
-    to right,
-    #73028a 10%,
-    rgb(2, 233, 241) 60%,
-    #73028a 70%
-    ) 1 2 10%;
 }
 
 .social-links li a i {
@@ -347,28 +350,26 @@ input[type="email"] {
 }
 }
 
-
+/* MEDIA QUERIES */
 @media screen and (min-width: 23em) and (max-width:119em){
-  /* -------------- BLOG -------------- */
-  .post-section-container {
+.post-section-container {
   margin-top:2em;
   margin-bottom:4.2em;
-  }
-  .post {
+}
+.post {
   height:auto;
-  }
-
+}
 }
 
 @media screen and (min-width: 25.875em) and (max-width:119em){
   
-  .navbar-link {
-    font-size: 1.5rem;
-  }
-  .post-section-container {
-    margin-top: 2em;
-    margin-bottom: 2.5em;
-  }
+.navbar-link {
+  font-size: 1.5rem;
+}
+.post-section-container {
+  margin-top: 2em;
+  margin-bottom: 2.5em;
+}
 .post-header {
   font-size: 1.6rem;
 }
@@ -385,21 +386,21 @@ input[type="email"] {
 
 /* iPhone X - MIN-HEIGHT  */
 @media screen and (min-height: 50.75em) and (max-width:119em){
-  .navbar-link {
-    font-size: 1.5rem;
-  }
+.navbar-link {
+  font-size: 1.5rem;
+}
   
-  .post-section-container {
+.post-section-container {
   margin-top: 3em;
   margin-bottom: 2.8em;
   }
-  .post-section {
-    margin: 0 1em;
+.post-section {
+  margin: 0 1em;
   }
-  .post {
-    padding: 0 1.5em;
+.post {
+  padding: 0 1.5em;
   }
-  .post-header {
+.post-header {
   font-size: clamp(0.2rem, 1vh + 1rem, 5rem);
 }
 .post-text {
@@ -412,26 +413,27 @@ input[type="email"] {
 margin:1em 0;
 }
 }
-/* 600px */
+
+
 @media screen and (min-width: 37.5em) and (max-width:119em){
-  .header-container{
-    height: 8em;
+.header-container{
+  height: 8em;
   }
-  .logotype-container {
-    margin-top: 1em;
-    margin-bottom: 0.2em;
+.logotype-container {
+  margin-top: 1em;
+  margin-bottom: 0.2em;
    }
-  .logotype {
-    font-size: clamp(0.5rem, 1vw + 2.2rem, 5rem);
+.logotype {
+  font-size: clamp(0.5rem, 1vw + 2.2rem, 5rem);
   }
 
-  .navbar-link {
-    font-size: clamp(0.5rem, 1vw + 1.5rem, 3rem);
+.navbar-link {
+  font-size: clamp(0.5rem, 1vw + 1.5rem, 3rem);
   }
   /* -------------- BLOG -------------- */
-  .post-section-container {
-    margin-top:1em;
-    margin-bottom: 1em;
+.post-section-container {
+  margin-top:1em;
+  margin-bottom: 1em;
   }
 .post-image {
   height: 10em;
@@ -449,43 +451,41 @@ margin:1em 0;
 
 @media screen and (min-width: 48em) and (max-width:119em){
 
-  .header-container{
-    height: 10em;
-  }
-  .logotype {
-    font-size: clamp(0.5rem, 1vw + 3rem, 7rem);
-  }
-  .navbar-list {
-    gap: 3em;
-  }
-  .navbar-link {
-    font-size: clamp(0.5rem, 1vw + 2rem, 5rem);
-  }
-  .post-section-container {
+.header-container {
+  height: 10em;
+}
+.logotype {
+  font-size: clamp(0.5rem, 1vw + 3rem, 7rem);
+}
+.navbar-list {
+  gap: 3em;
+}
+.navbar-link {
+  font-size: clamp(0.5rem, 1vw + 2rem, 5rem);
+}
+.post-section-container {
   margin-top: 2em;
   margin-bottom: 3em;
-  }
-  .post {
-    padding: 0 clamp(0.5rem, 1vw + 3rem, 10rem);;
-  }
+}
+.post {
+  padding: 0 clamp(0.5rem, 1vw + 3rem, 10rem);;
+}
 
-  .post-header{
-    font-size: clamp(0.5rem, 1vw + 2rem, 4rem);
-  }
+.post-header {
+  font-size: clamp(0.5rem, 1vw + 2rem, 4rem);
+}
 
  
-  .post-text {
-    /* outline: auto; */
-    height: auto;
-    line-height: 2.5rem;
-    font-size: clamp(0.5rem, 1vw + 1rem, 3rem);
-  }
+.post-text {
+  height: auto;
+  line-height: 2.5rem;
+  font-size: clamp(0.5rem, 1vw + 1rem, 3rem);
+}
 
 .post-read-more{
   margin-bottom: 1.5em;
 }
 .post-read-more-text{
-  
   font-size: clamp(0.5rem, 1vw + 1.5rem, 5rem);
 }
 
@@ -496,37 +496,33 @@ margin:1em 0;
   height: 70px;
   line-height: 4.5rem;
   font-size: clamp(1rem, 1vw + 2.5rem, 5rem);
- }
+}
 }
 
-
 @media screen and (min-width: 62em) and (max-width:119em) {
-  .post-section-container {
-    margin-top: 5em;
-    margin-bottom: 6.5em;
-    }
-
-    .post-section {
-      margin: 0 5em;
-    }
-    .post {
-      height: auto;
-      padding: 0 3em;
-      margin: 2em 0em;
-    }
-    .post-image {
-      height: 15em;
-    }
+.post-section-container {
+  margin-top: 5em;
+  margin-bottom: 6.5em;
+  }
+.post-section {
+  margin: 0 5em;
+  }
+.post {
+  height: auto;
+  padding: 0 3em;
+  margin: 2em 0em;
+} 
+.post-image {
+  height: 15em;
+} 
 .post-header {
-      font-size: clamp(0.5rem, 1vw + 2.5rem, 5rem);
-  
+  font-size: clamp(0.5rem, 1vw + 2.5rem, 5rem);
 }
 .post-text{
   height: auto;
   line-height: 3rem;
   font-size: clamp(0.5rem, 1vw + 1.5rem, 4rem);
   margin-bottom: 0.5em;
-  
 }
 .post-read-more {
   margin: 1.5em 0;
