--- a/assets/css/style_contact.css
+++ b/assets/css/style_contact.css
@@ -1,24 +1,25 @@
-
 .contact-section-container {
-display: flex;
-justify-content: center;
-margin-top: 10em;
-margin-bottom: 13em;
+    display: flex;
+    justify-content: center;
+    margin-top: 10em;
+    margin-bottom: 13.75em;
 }
-
 .contact-section {
-    flex-direction: column;
-    flex-wrap: wrap;
     width:30em;
-    padding: 1em;
+    border: 10px solid;
+    border-image:linear-gradient(
+        to bottom,
+        rgba(50, 8, 201, 0.5),
+        rgba(8, 255, 255, 0.8),
+        rgba(255, 25, 224, 0.8),
+        rgba(255, 25, 224, 0.1)
+        ) 1 2 10% 90%;
 }
-
 .contact-header {
-text-align: center;
-background-color: rgb(0, 0, 0);
-font-size: clamp(0.5rem, 1vw + 0.8rem, 3rem);
+    text-align: center;
+    background-color: rgb(0, 0, 0);
+    font-size: clamp(0.5rem, 1vw + 0.8rem, 3rem);
 }
-
 .contact-form {
     width: 100%;
     font-size: clamp(0.2rem, 1vw + 0.5rem, 2rem);
@@ -26,7 +27,6 @@ font-size: clamp(0.5rem, 1vw + 0.8rem, 3rem);
     outline: unset;
     color:black;
 }
-
 .contact-form-input,
 .contact-message-input {
     font-family: Arial, Helvetica, sans-serif;
@@ -36,23 +36,20 @@ font-size: clamp(0.5rem, 1vw + 0.8rem, 3rem);
     font-size: clamp(0.2rem, 1vw + 0.5rem, 2rem);
     color:black;
     border:2px solid;
-            border-image: linear-gradient(
-                to right,
-                #73028a 10%,
-                rgb(2, 233, 241) 60%,
-                #73028a 70%
-                ) 1 2 10%;
+    border-image: linear-gradient(
+        to right,
+        #73028a 10%,
+        rgb(2, 233, 241) 60%,
+        #73028a 70%
+        ) 1 2 10%;
 }
-
 .contact-message-input {
     height:5em;
 }
- 
 .contact-message-input::placeholder {
     font-style: italic;
     padding: 1em;
 }
-
 .contact-button{
     width: 100%;
     font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
@@ -60,30 +57,27 @@ font-size: clamp(0.5rem, 1vw + 0.8rem, 3rem);
     color:cyan;
     filter: drop-shadow(0 0 8px rgba(255, 255, 255, 0.966));
     border: 10px solid;
-        border-image:linear-gradient(
-            to bottom,
-            rgba(50, 8, 201, 0.5),
-            rgba(8, 255, 255, 0.8),
-            rgba(255, 25, 224, 0.8),
-            rgba(255, 25, 224, 0.1)
-          ) 1 2 10% 90%;
+    border-image:linear-gradient(
+        to bottom,
+        rgba(50, 8, 201, 0.5),
+        rgba(8, 255, 255, 0.8),
+        rgba(255, 25, 224, 0.8),
+        rgba(255, 25, 224, 0.1)
+        ) 1 2 10% 90%;
 }
-
 
 /* - MEDIA QUERIES - */
 @media screen and (min-width: 0em) and (max-width:119.938em) {
 .contact-section-container{
-    margin-top: clamp(0.2em, 1vw + 4em, 40em);
-  margin-bottom: clamp(0.2em, 1vw + 4.2em, 40em);
+    margin-top: 4em;
+    margin-bottom: 5.3em;
 }
-
 .contact-section {
     width: 17em;
 }
 .contact-header {
     font-size:  clamp(0.2rem, 1vw + 1.5rem, 4rem);;
 }
-
 .contact-form {
     font-size: clamp(0.2rem, 1vw + 1rem, 3rem);
 }
@@ -91,84 +85,68 @@ font-size: clamp(0.5rem, 1vw + 0.8rem, 3rem);
 .contact-message-input {
     font-size: clamp(0.2rem, 1vw + 1rem, 3rem);
 }
-
 .contact-message-input {
-    /* height:8.1em; */
     margin: 0.3em 0;
-}
-}
-
+}}
 
 @media screen and (min-width: 23em) and (max-width:119.938em){
-    .contact-section-container{
-        margin-top: 7em;
-      margin-bottom: 7.2em;
-    }
-}
+.contact-section-container{
+    margin-top: 7em;
+    margin-bottom: 8em;
+}}
 @media screen and (min-width: 25.875em) and (max-width:119.938em) {
-    .contact-section-container{
-        margin-top: 10em;
-        margin-bottom: 8.4em;
-    }
-}
+.contact-section-container{
+    margin-top: 10em;
+    margin-bottom: 9.1em;
+}}
 
-/* iPhone X - MIN-HEIGHT  */
 @media screen and (min-height: 50.75em) and (max-width:119.938em){
-
-    .contact-section-container{
-        margin-top: 5em;
-        margin-bottom: 6em;
-    }
-
-    .contact-message-input {
-        height: 15em;
-    }
-    .contact-message-input::placeholder {
-        font-size: clamp(0.2rem, 1vw + 1rem, 2rem);
-    }
+.contact-section-container{
+    margin-top: 5em;
+    margin-bottom: 6.7em;
 }
+.contact-message-input {
+    height: 15em;
+}
+.contact-message-input::placeholder {
+    font-size: clamp(0.2rem, 1vw + 1rem, 2rem);
+}}
 
 @media screen and (min-width: 37.5em) and (max-width:119.938em){
-    .contact-section-container{
+.contact-section-container{
     margin-top: 5em;
-    margin-bottom: 7.1em;
-    }
-    .contact-section {
-        width:25em;
-    }
-
-    .contact-message-input {
-        height: 10em;
-    }
-    .contact-message-input::placeholder {
-        font-size: clamp(0.2rem, 1vw + 1rem, 2rem);
-    }
+    margin-bottom: 7.8em;
 }
-
+.contact-section {
+    width:25em;
+}
+.contact-message-input {
+    height: 10em;
+}
+.contact-message-input::placeholder {
+    font-size: clamp(0.2rem, 1vw + 1rem, 2rem);
+}}
 
 @media screen and (min-width: 48em) and (max-width:119.938em) {
-    .contact-section-container{
+.contact-section-container{
     margin-top: 10em;
-    margin-bottom: 10em;
-    }
-    .contact-section {
-        width:30em;
-    }
+    margin-bottom: 10.7em;
 }
+.contact-section {
+    width:30em;
+}}
 
 @media screen and (min-width: 62em) and (max-width:119.938em) {
-    .contact-section-container{
+.contact-section-container{
     margin-top: 10em;
-    margin-bottom: 19.5em;
-    }
-    .contact-section {
-        width:40em;
-    }
-    .contact-message-input {
-        height: 15em;
-    }
-    .contact-button {
-        font-size: 2.5rem;
-    }
+    margin-bottom: 20.2em;
 }
-
+.contact-section {
+    width:40em;
+}
+.contact-message-input {
+    height: 15em;
+}
+.contact-button {
+    font-size: 2.5rem;
+}}
