--- a/assets/css/style_resources.css
+++ b/assets/css/style_resources.css
@@ -1,21 +1,15 @@
-
-/* - RESOURCES SECTION- */
 .resource-section-container{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-margin-top: 8em;
-margin-bottom: 10.8em;
- 
+  margin-top: 8em;
+  margin-bottom: 10.8em;
 }
 .resource-section {
-  
   display: flex;
   justify-content: center;
   flex-direction: row;
   gap: 5em;
- 
- 
 }
 .resource{
   display: flex;
@@ -47,170 +41,115 @@ margin-bottom: 10.8em;
   ) 1 2 10% 90%;
 }
 
-
-.resource-header
- {
+.resource-header {
   font-size: clamp(0.2rem, 1vw + 1rem, 3rem);
   text-align: center;
-
- }
- .resource-text
- {
+}
+ .resource-text {
   font-family: Arial, Helvetica, sans-serif;
   font-size: clamp(0.2rem, 1vw + 0.5rem, 2rem);
   text-align: center;
 }
 
-  .resource-link
- {
-    text-decoration: unset;
-    color: white;
-  }
-
+.resource-link {
+  text-decoration: unset;
+  color: white;
+}
 
 /* - MEDIA QUERIES - */
-
 @media screen and (min-width: 0em) and (max-width:119em){
-
-  .resource-section-container{
-    /* outline: auto; */
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: clamp(0.2em, 1vw + 2em, 40em);
-    margin-bottom: clamp(0.2em, 1vw + 2.1em, 40em);
-
-  }
-  .resource-section{
-
-    /* margin: 0 clamp(0.2em, 1vw + 3em, 40em); */
+.resource-section-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: clamp(0.2em, 1vw + 2em, 40em);
+  margin-bottom: clamp(0.2em, 1vw + 2.1em, 40em);
+}
+.resource-section{
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap:2.1em;
   margin:0;
   padding:0;
-  }
-  .resource {
-    display: flex;
-    align-items: center;
-    height:auto;
-    width: auto;
-    padding: 0.5em 0.8em;
-
-  }
-
-  .resource-image {
-    display: none;
-  }
-
-  .resource-header
-  {
-   font-size: clamp(0.2rem, 1vw + 1.5rem, 4rem);
-   margin-bottom: clamp(0.2em, 1vw + 0.2em, 1em);
-  }
-  .resource-text
-  {
-   font-size: clamp(0.2rem, 1vw + 1rem, 3rem);
-
- }
- 
-
 }
-
-
+.resource {
+  display: flex;
+  align-items: center;
+  height:auto;
+  width: auto;
+  padding: 0.5em 0.8em;
+}
+.resource-image {
+  display: none;
+}
+.resource-header
+{
+  font-size: clamp(0.2rem, 1vw + 1.5rem, 4rem);
+  margin-bottom: clamp(0.2em, 1vw + 0.2em, 1em);
+}
+.resource-text
+{
+  font-size: clamp(0.2rem, 1vw + 1rem, 3rem);
+}}
 
 @media screen and (min-width: 23em) and (max-width:119em){
- 
-  .resource-section-container{
-    /* outline: auto; */
-  
-    margin-top: clamp(0.2em, 1vw + 4em, 40em);
-    margin-bottom: clamp(0.2em, 1vw + 5.5em, 40em);
-
-  }
-}
-
-
+.resource-section-container{
+  margin-top: clamp(0.2em, 1vw + 4em, 40em);
+  margin-bottom: clamp(0.2em, 1vw + 5.5em, 40em);
+}}
 
 @media screen and (min-width: 25.875em)and (max-width:119em) {
- 
-  .resource-section-container{
-    /* outline: auto; */
-  
-    margin-top: clamp(0.2em, 1vw + 5em, 40em);
-    margin-bottom: clamp(0.2em, 1vw + 7em, 40em);
-
-  }
-  .resource-section {
-    gap:3em;
-  }
+.resource-section-container{
+  margin-top: clamp(0.2em, 1vw + 5em, 40em);
+  margin-bottom: clamp(0.2em, 1vw + 7em, 40em);
 }
+.resource-section {
+  gap:3em;
+}}
 
 @media screen and (min-height: 50.75em) and (max-width:119em){
-  .resource-section-container{
-    /* outline: auto; */
-  
-    margin-top: 6em;
-    margin-bottom: 6.2em;
-
-  }
-  .resource-section {
-    gap:5.5em;
-  }
-
+.resource-section-container{
+  margin-top: 6em;
+  margin-bottom: 6.2em;
 }
+.resource-section {
+  gap:5.5em;
+}}
 
-/* 600px */
 @media screen and (min-width: 37.5em) and (max-width:119em){
-  .resource-section-container {
-    margin-bottom: 7.5em;
-  }
+.resource-section-container {
+  margin-bottom: 7.5em;
+}}
 
-}
 @media screen and (min-width: 48em) and (max-width:119em){
-
-  .resource-section-container{
-    margin-top: clamp(0.2em, 1vw + 6em, 40em);
-    margin-bottom: clamp(0.2em, 1vw + 7em, 40em);
-
-  }
-  .resource-section{
-    gap: 5.2em;
-  }
-  .resource {
-    padding: 1em;
-  }
-
+.resource-section-container{
+  margin-top: clamp(0.2em, 1vw + 6em, 40em);
+  margin-bottom: clamp(0.2em, 1vw + 7em, 40em);
 }
-
+.resource-section{
+  gap: 5.2em;
+}
+.resource {
+  padding: 1em;
+}}
 
 @media screen and (min-width:62em) and (max-width:119em){
-
-  .resource-section-container{
-    /* outline: auto; */
-  
-    margin-top: clamp(0.2em, 1vw + 7em, 40em);
-    margin-bottom: clamp(0.2em, 1vw + 10em, 40em);
-
-  }
-  .resource-section{
-    gap: 5.4em;
-  }
-  .resource {
-    padding: 1.8em;
-  }
-
-  .resource-header
-  {
-   font-size: clamp(0.2rem, 1vw + 3rem, 5rem);
-   /* margin-bottom: clamp(0.2em, 1vw + 0.2em, 1em); */
-  }
-  .resource-text
-  {
-   font-size: clamp(0.2rem, 1vw + 2rem, 4rem);
-
- }
+.resource-section-container{
+  margin-top: clamp(0.2em, 1vw + 7em, 40em);
+  margin-bottom: clamp(0.2em, 1vw + 10em, 40em);
 }
-
-
+.resource-section{
+  gap: 5.4em;
+}
+.resource {
+  padding: 1.8em;
+}
+.resource-header
+{
+  font-size: clamp(0.2rem, 1vw + 3rem, 5rem);
+}
+.resource-text
+{
+  font-size: clamp(0.2rem, 1vw + 2rem, 4rem);
+}}
